
R0.1.3  M. Dunning - 2019-03-19
    - Reduce flood of cryptic error messages printed by driver if a device is disconnected.
            Now we should only see a sensible message periodically.
    - Update ai_convert_autosave.template

R0.1.2  M. Dunning - 2018-08-23
    - Add template files for conversions
    - Example edm screens: make module numbers two digits

R0.1.1  M. Dunning - 2018-08-22
    - Add PINI to 900R_CINIT record
    - Example IOC: add helpful comments to st.cmd; remove unneeded dbpf commands; 
            make numbers two digits long

R0.1.0  M. Dunning - 2018-08-02
    - First stable release
